v1.99.0
----------------------------------------------------------------------------------------------------
  * EXPERIMENTAL, EARLY support for the ACMEv2 protocol. Not enabled by default, see README.md.
  * mod_md checks for each domain if the 'Protocols' directive allows the 'acme-tls/1' protocol.
    Only then is the challenge method 'tls-alpn-01' enabled for a MD.
  * first successful tls-alpn-01 test
  * test_700 auto tests now working as test_702 for ACMEv2
  * test_600 roundtrip tests now working as test_602 for ACMEv2
  * test_500 drive tests now working as test_502 for ACMEv2
  * More test cases regarding ACMEv2 account handling.
  * Removed "id" field from ACME accounts as redundant. Internal cleanup of account handling.
  * Integrated recent changes from Apache subversion.
  * Starting support for ACMEv2 protocol
  * MDCertificateAgreement has new value 'accepted' instead of the Terms-of-Services URL. This
    avoids confusion and reflects more what ACMEv2 protocol requires. For ACMEv1 servers, the
    correct URL is retrieved from the server's meta data when 'accepted' is configured.
  
v1.1.17
----------------------------------------------------------------------------------------------------
  * fixed several coding bugs in detection of ACME challenge changes, e.g. when the local
    MDomains changed and challenges for others had already been set up. Fixes thanks to
    Michael Kaufmann (@mkauf).
  * added log messages when (supposed) ACME server's answer was not understood (by @mkauf)
  * eliminated some compiler warnings about signedness and unused variables.

v1.1.16
----------------------------------------------------------------------------------------------------
  * When you move the last domain name from an MD to another one, that now empty MD gets moved
    to the store archive. The JSON file will still show the last domain, in case you want
    to ressurect after a (human) configuration error. Fixes PR 62572