@@ -149,6 +149,7 @@
 		B2C1BE0321EF7158002EF7B4 /* test_0602_roundtrip.py */ = {isa = PBXFileReference; lastKnownFileType = text.script.python; path = test_0602_roundtrip.py; sourceTree = "<group>"; };
 		B2C1BE0421EF75BE002EF7B4 /* test_0702_auto.py */ = {isa = PBXFileReference; lastKnownFileType = text.script.python; path = test_0702_auto.py; sourceTree = "<group>"; };
 		B2C1BE0521F219DA002EF7B4 /* mod_ssl_md2-trunk.diff */ = {isa = PBXFileReference; fileEncoding = 4; lastKnownFileType = text; path = "mod_ssl_md2-trunk.diff"; sourceTree = "<group>"; };
+		B2C1BE0621F5CB38002EF7B4 /* test_0710_migration.py */ = {isa = PBXFileReference; lastKnownFileType = text.script.python; path = test_0710_migration.py; sourceTree = "<group>"; };
 		B2CE87C51F8E28EA000629B2 /* notify.py */ = {isa = PBXFileReference; lastKnownFileType = text.script.python; path = notify.py; sourceTree = "<group>"; };
 		B2D309A01EBA229F007BECC8 /* AUTHORS */ = {isa = PBXFileReference; lastKnownFileType = text; path = AUTHORS; sourceTree = SOURCE_ROOT; };
 		B2D309A11EBA229F007BECC8 /* ChangeLog */ = {isa = PBXFileReference; lastKnownFileType = text; path = ChangeLog; sourceTree = SOURCE_ROOT; };
@@ -366,6 +367,7 @@
 				B2C1BE0321EF7158002EF7B4 /* test_0602_roundtrip.py */,
 				B2B81ED71F17BF3200E35CA3 /* test_0700_auto.py */,
 				B2C1BE0421EF75BE002EF7B4 /* test_0702_auto.py */,
+				B2C1BE0621F5CB38002EF7B4 /* test_0710_migration.py */,
 				B2FEEDDF1FFB910D0029E19C /* test_0800_stapling.py */,
 				B2FFC9E920C5776A004A8F58 /* test_0900_notify.py */,
 				B255730C1EE6D11200E0B132 /* test_base.py */,
