@@ -59,24 +59,12 @@ static apr_status_t acct_make(md_acme_acct_t **pacct, apr_pool_t *p,
 
 static const char *mk_acct_id(apr_pool_t *p, md_acme_t *acme, int i)
 {
-    int major = MD_ACME_VERSION_MAJOR(acme->version); 
-    switch (major) {
-        case 1:
-            return apr_psprintf(p, "ACME-%s-%04d", acme->sname, i);
-        default:
-            return apr_psprintf(p, "ACMEv%d-%s-%04d", major, acme->sname, i);
-    }
+    return apr_psprintf(p, "ACME-%s-%04d", acme->sname, i);
 }
 
 static const char *mk_acct_pattern(apr_pool_t *p, md_acme_t *acme)
 {
-    int major = MD_ACME_VERSION_MAJOR(acme->version); 
-    switch (major) {
-        case 1:
-            return apr_psprintf(p, "ACME-%s-*", acme->sname);
-        default:
-            return apr_psprintf(p, "ACMEv%d-%s-*", major, acme->sname);
-    }
+    return apr_psprintf(p, "ACME-%s-*", acme->sname);
 }
  
 /**************************************************************************************************/
